--- a/rapport/rapp.tex
+++ b/rapport/rapp.tex
@@ -22,7 +22,8 @@
 
     \begin{document}
      \maketitle
-     \tableofcontents
+     \section{Usage}
+     Le \texttt{.tar.gz} contient un Makefile qui permet de compiler le projet en appellant \texttt{make} ou qui appellé avec la commander \texttt{make html} génère dans le sous-dossiers \texttt{/html} une documentation basée sur les commentaires du code. Ces derniers permettent généralement d'obtenir plus de détail sur le code que ce qui est décrit dans le présent rapport.
      \section{Hierarchie du Projet}
      Dans le \texttt{.tar.gz} du projet on pourra trouver les fichiers : \texttt{env\_subst.v, inference.v, init.v, lemmas\_narrowing.v, lemmas\_regularity.v, narrowing.v, red.v, regularity.v, shift\_lemmas.v}. 
 %      env\_subst.v, inference.v, 
