--- a/rapport/rapp.tex
+++ b/rapport/rapp.tex
@@ -50,7 +50,7 @@
      \input{implem.tex}
      \section{Automation tools}
      \input{auto.tex}
-     \section{TONAME}
+     \section{Commentaires}
      \input{toname.tex}
      
 
