--- a/rapport/implem.tex
+++ b/rapport/implem.tex
@@ -1,6 +1,6 @@
-Cette partie contient majoritairement une description des choix qui ont été fait dans \texttt{init.v}. 
-     \paragraph{} Comme indiqué en commentaire dans \texttt{init.v}, on utilise les indices de Bruijn localement et globalement. On n'a pas à s'occuper d'alpha-conversion, mais beaucoup de lemmes sont dûs au shifts lors de passage sous des binders. Les environnements des variables de type et de terme sont implémenté sous la forme d'une liste commune de type \texttt{list envElem} où \texttt{envElem} contient soit un \texttt{Typ} ou un \texttt{kind}. Ces choix rendent nécéssaire l'écriture de 3 fonctions de shifts et de 3 fonctions de substitutions que l'on peut trouver dans \texttt{init.v}. 
-Il faut noter que l'implémentation de \texttt{subst} et de \texttt{tsubst} est faite de sorte que l'on puisse shifter toutes les variables plus grande qu'un plancher $p$ d'une valeur $n$ dans un type $T$, appeller \texttt{shift T n p} dans le code et noter $\uparrow_p^nT$. Cette implémentation nous oblige aussi à prouver des lemmes importants pour de nombreuses parties du code et que l'on peut trouver dans \texttt{shift\_lemmas.v}. On résume ici l'énoncé de ces lemmes qui sont nécessaires à la preuve de nombreux lemmes de notre projet. Certains des lemmes ci-dessous sont utilisés directement, d'autres sont d'abord spécialisés en des énoncés plus faibles. Les variables libres sont quantifiées universellement : 
+Cette partie contient majoritairement une description des choix qui ont été faits dans \texttt{init.v}. 
+     \paragraph{} Comme indiqué en commentaire dans \texttt{init.v}, on utilise les indices de Bruijn localement et globalement. On n'a pas à s'occuper d'alpha-conversion, mais beaucoup de lemmes sont dûs aux shifts lors de passages sous des binders. Les environnements des variables de type et de terme sont implémentés sous la forme d'une liste commune de type \texttt{list envElem} où \texttt{envElem} contient soit un \texttt{Typ} ou un \texttt{kind}. Ces choix rendent nécessaire l'écriture de 3 fonctions de shifts et de 3 fonctions de substitutions que l'on peut trouver dans \texttt{init.v}. 
+Il faut noter que l'implémentation de \texttt{subst} et de \texttt{tsubst} est faite de sorte que l'on puisse shifter toutes les variables plus grande qu'un plancher $p$ d'une valeur $n$ dans un type $T$, appelé \texttt{shift T n p} dans le code et noté $\uparrow_p^nT$. Cette implémentation nous oblige aussi à prouver des lemmes importants pour de nombreuses parties du code et que l'on peut trouver dans \texttt{shift\_lemmas.v}. On résume ici l'énoncé de ces lemmes qui sont nécessaires à la preuve de nombreux lemmes de notre projet. Certains des lemmes ci-dessous sont utilisés directement, d'autres sont d'abord spécialisés en des énoncés plus faibles. Les variables libres sont quantifiées universellement : 
      \begin{align} 
       \Big\uparrow_p^0 T &= T 
        \eqname{\texttt{(tshift\_ident)}} \\
