--- a/rapport/toname.tex
+++ b/rapport/toname.tex
@@ -1,7 +1,7 @@
-Cette partie du rapport reprend certains fichiers en revenant cette fois sur les difficultés que nous avons rencontrées dans chacune des parties et en essayant de mettre en avant ce qui aurait pû être amélioré, à la fois dans le code et dans la manière avec laquelle nous avons essayé de répondre au problème. D'une manière générale nous avons commencé à travailler en parrallèle sur les différentes parties du code, en partant des définitions de \texttt{init.v} et en essayant de répondre à des questions qui nous semblaient distinctes. Toutefois ils nous a fallu revenir plusieurs fois sur les choix à la fois d'implémentation que nous avions fait au début mais aussi sur des définitions qui étaient fausses.
+Cette partie du rapport reprend certains fichiers en revenant cette fois sur les difficultés que nous avons rencontrées dans chacune des parties et en essayant de mettre en avant ce qui aurait pu être amélioré, à la fois dans le code et dans la manière avec laquelle nous avons essayé de répondre au problème. D'une manière générale nous avons commencé à travailler en parallèle sur les différentes parties du code, en partant des définitions de \texttt{init.v} et en essayant de répondre à des questions qui nous semblaient distinctes. Toutefois ils nous a fallu revenir plusieurs fois sur les choix à la fois d'implémentation que nous avions fait au début mais aussi sur des définitions qui étaient fausses.
      \begin{itemize}
-      \item \texttt{init.v} Nous avons pris les définitions prises par l'énoncé, nous avons donc rapidemment pu coder les définitions et les prédicats inductifs de cette partie ainsi que les lemmes associés.
-      \item \texttt{shiftlemma.v} Les lemmes qui se trouvent dans ce fichier, bien que faciles et rapides à démontrer ont été difficile à trouver (parce qu'il était nécessaire d'essayer de commencer à essayer de faire les preuves de lemmes plus importants pour voir de quels résultats nous avions besoin, mais aussi parce que nous avons essayé de synthétiser tous les lemmes dont nous aurions besoin par la suite et portant sur cette partie en un minimum de lemme).
-      \item \texttt{red.v} Cette partie du projet, assez indépendante des autres, est une de celles qui nous a pris le moins de temps. En effet il n'était pas nécessaire d'établir des lemmes intermédiaire et les résultats découlaient assez rapidemment des définitions. On peut noter que cette partie contient une preuve que les termes en forme normale sont bien ceux dont la réduction termine et réciproquement.
+      \item \texttt{init.v} Nous avons pris les définitions suggérées par l'énoncé, nous avons donc rapidement pu coder les définitions et les prédicats inductifs de cette partie ainsi que les lemmes associés.
+      \item \texttt{shiftlemma.v} Les lemmes qui se trouvent dans ce fichier, bien que faciles et rapides à démontrer ont été difficiles à trouver (parce qu'il était nécessaire d'essayer de commencer à faire les preuves de lemmes plus importants pour voir de quels résultats nous avions besoin, mais aussi parce que nous avons essayé de synthétiser tous les lemmes dont nous aurions besoin par la suite et portant sur cette partie en un minimum de lemmes).
+      \item \texttt{red.v} Cette partie du projet, assez indépendante des autres, est une de celles qui nous a pris le moins de temps. En effet il n'était pas nécessaire d'établir des lemmes intermédiaires et les résultats découlaient assez rapidemment des définitions. On peut noter que cette partie contient une preuve que les termes en forme normale sont bien ceux qui ne se réduisent pas et réciproquement.
       \item {\tt lemmas\_regularity.v} prouve de nombreux lemmes de weakening du contexte par un terme et un type. On peut noter que {\tt insert\_kind} et {\tt remove\_var} sont duaux l'un de l'autre le long des axes ajout/suppression d'un type/terme.
      \end{itemize}
