--- a/rapport/rapp.tex
+++ b/rapport/rapp.tex
@@ -23,19 +23,19 @@
     \begin{document}
      \maketitle
      \section{Usage}
-     Le \texttt{.tar.gz} contient un Makefile qui permet de compiler le projet en appellant \texttt{make} ou qui appellé avec la commande \texttt{make html} génère dans le sous-dossiers \texttt{/html} une documentation basée sur les commentaires du code. Ces derniers permettent généralement d'obtenir plus de détail sur le code que ce qui est décrit dans le présent rapport.
+     Le \texttt{.tar.gz} contient un Makefile qui permet de compiler le projet en appellant \texttt{make} ou qui appelé avec la commande \texttt{make html} génère dans le sous-dossiers \texttt{/html} une documentation basée sur les commentaires du code. Ces derniers permettent généralement d'obtenir plus de détail sur le code que ce qui est décrit dans le présent rapport.
      \section{Hiérarchie du Projet}
      Dans le \texttt{.tar.gz} du projet on pourra trouver les fichiers : \texttt{env\_subst.v, inference.v, init.v, lemmas\_narrowing.v, lemmas\_regularity.v, narrowing.v, red.v, regularity.v, shift\_lemmas.v}. 
 %      env\_subst.v, inference.v, 
      \begin{itemize}
-      \item \texttt{init.v} contient les définitions de base du projet tels que : \texttt{typ}, \texttt{term}, \texttt{env}. Il contient aussi les fonctions de base nécessaires à la manipulation des terms et des types, telles que \texttt{tshift}, \texttt{tsubst}, \texttt{get\_kind}. Enfin on peut y trouver les lemmes de base décrivant les propriétés des définitions et des fonctions précédentes. Pour un détail des intrications des lemmes, se référer à ~\ref{fig:graph}.
-      \item \texttt{shift\_lemmas.v} contient les lemmes décrivant les propriétés des \texttt{shift}, la plupart découlant du lemme le plus fort : \texttt{tshift\_commut}, dont la sémantique est décrit dans la partie 2 de ce rapport.
+      \item \texttt{init.v} contient les définitions de base du projet telles que : \texttt{typ}, \texttt{term}, \texttt{env}. Il contient aussi les fonctions de base nécessaires à la manipulation des termes et des types, telles que \texttt{tshift}, \texttt{tsubst}, \texttt{get\_kind}. Enfin on peut y trouver les lemmes de base décrivant les propriétés des définitions et des fonctions précédentes. Pour un détail des intrications des lemmes, se référer à ~\ref{fig:graph}.
+      \item \texttt{shift\_lemmas.v} contient les lemmes décrivant les propriétés des \texttt{shift}, la plupart découlant du lemme le plus fort : \texttt{tshift\_commut}, dont la sémantique est décrite dans la partie 2 de ce rapport.
       \item \texttt{lemmas\_regularity.v} contient les lemmes qui permettent d'établir les deux sous-lemmes \texttt{subst\_preserves\_typing} et \texttt{tsubst\_preserves\_kinding} qui sont conseillés dans l'énoncé afin de prouver \texttt{regularity}.
       \item \texttt{regularity.v} contient l'énoncé et la preuve de \texttt{regularity}, utilisant les lemmes prouvés dans \texttt{lemmas\_regularity.v}. Il est à noter toutefois que la preuve n'utilise pas \texttt{subst\_preserves\_typing} mais des lemmes qui ont permis d'établir ce résultat sont toutefois utilisés.
       \item \texttt{lemmas\_narrowing.v} contient les lemmes nécessaires pour prouver \texttt{narrowing}.
       \item \texttt{narrowing.v} contient l'énoncé et la preuve de \texttt{narrow}.
-      \item {\tt env\_subst.v} reprend les énoncés classique (maintient de la well-formedness, du kinding, du typing...) dans le cas d'un environnement substitué.
-      \item \texttt{red.v} contient la définition d'une étape de réduction par congruence, la définition de la clôture réflexive et transitive de la réduction, la définition de la forme normale et neutre d'un terme. Enfin on y trouvera les énoncés et preuves de la congruence de la réduction, de la clôture par substitution des formes normales et neutres et enfin de l'équivalence entre les termes dont la réduction termine et les termes en forme normale.
+      \item {\tt env\_subst.v} reprend les énoncés classique (maintien de la well-formedness, du kinding, du typing...) dans le cas d'un environnement substitué.
+      \item \texttt{red.v} contient la définition d'une étape de réduction par congruence, la définition de la clôture réflexive et transitive de la réduction, la définition de la forme normale et neutre d'un terme. Enfin on y trouvera les énoncés et preuves de la congruence de la réduction, de la clôture par substitution des formes normales et neutres et enfin de l'équivalence entre les termes ne se réduisant pas et les termes en forme normale.
       \item \texttt{inference.v} contient les fonctions inférant les types et les kinds, d'un terme ou d'un type, ainsi que les preuves de complétude et de correction pour chacune de ces fonctions.
      \end{itemize}
 
@@ -48,7 +48,7 @@
       
      \section{Choix d'implémentation}
      \input{implem.tex}
-     \section{Automation tools}
+     \section{Outil d'automatisation}
      \input{auto.tex}
      \section{Commentaires}
      \input{toname.tex}
